--- a/content/About.html
+++ b/content/About.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='run.html'>run</a></li>
+                     <li><a href='About.html'>About</a><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='snake.html'>snake</a></li></ul><li><a href='Final Project.html'>Final Project</a><li><a href='run.html'>run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -145,7 +145,8 @@ img.add_border {
 <p>41023131</p>
 <p>網站倉儲: <a href="https://github.com/george0324/cp2021_hw">https://github.com/george0324/cp2021_hw</a> </p>
 <p>網站連結: <a href="https://george0324.github.io/cp2021_hw/">https://george0324.github.io/cp2021_hw/</a></p>
-<p>其他與個人或作業相關資料說明或介紹</p><br /> <a href='HW1.html'>Next</a> >> HW1</div>
+<p>其他與個人或作業相關資料說明或介紹y</p>
+<br /> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
