--- a/content/HW1.html
+++ b/content/HW1.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='run.html'>run</a></li>
+                     <li><a href='About.html'>About</a><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='snake.html'>snake</a></li></ul><li><a href='Final Project.html'>Final Project</a><li><a href='run.html'>run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -151,7 +151,8 @@ img.add_border {
 <li>請至少練習 key in 這段英文內容三次, 然後看看是否已經了解如何透過電腦鍵盤 touch typing?</li>
 <li>接下來請利用中文輸入 <a href="https://ithelp.ithome.com.tw/articles/10206233">https://ithelp.ithome.com.tw/articles/10206233</a> 的第一段中文說明, 請利用手機計時, 大概需要多少時間?</li>
 </ol>
-<p></p><br />About << <a href='About.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
+<p></p>
+<br />About << <a href='About.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
         
     <!-- footer -->
       <div class="container">
